--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 asgiref==3.5.2
+beautifulsoup4==4.11.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
 Django==4.1.3
 django-environ==0.9.0
+idna==3.4
+requests==2.28.1
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
+urllib3==1.26.13
