--- a/.gitignore
+++ b/.gitignore
@@ -58,9 +58,10 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
+db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# Flask stuff:s
 instance/
 .webassets-cache
 
